# Code-Review-GPT-Gitlab

./: .dockerignore  .env.example  .env.prod.example  .gitignore  BUGFIX_SUMMARY.md  CLAUDE.md  CUSTOM_PROMPT_FEATURE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  QUICK_START.md  README.md  README_EN.md  app.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  simple_chat.py  test_project_management.py  test_simple_webhook.py  test_webhook_optimization.py  zensical.toml  zensical.zh.toml
app/: gitlab_utils.py  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  PROJECT_MANAGEMENT.md  PROJECT_MANAGEMENT_EXAMPLE.md  README.md  clear_feishu_secret.py  docker-compose.yml  init_configs.py  init_database.py  pyproject.toml  requirements.txt  start.sh  start_production.sh  test_api_endpoints.py  test_feishu_sign.py  test_feishu_webhook.py  test_prompt_feature.py  test_prompt_integration.py  test_timezone.py  test_unified_webhook.py  test_upgrade.py
backend/apps/common/: __init__.py  logging_utils.py
backend/apps/llm/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/response/: __init__.py  apps.py  models.py  notification_dispatcher.py  notification_dispatcher.py.backup  services.py
backend/apps/review/: __init__.py  apps.py  claude_cli_service.py  models.py  opencode_cli_service.py  report_generator.py  repository_manager.py  review_result_parser.py  services.py  urls.py  views.py
backend/core/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
backend/utils/: gitlab_parser.py
(+125 files in other folders)
