[project]
name = "code-review-gpt-gitlab"
version = "1.0.0"
description = "Code Review GPT GitLab Backend"
requires-python = ">=3.11"

dependencies = [
    "Django==4.1.13",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "retrying==1.3.4",
    "openai==1.59.7",
    "unionllm==0.1.23",
    "litellm==1.58.2",
    "python-gitlab==3.15.0",
    "python-dateutil==2.8.2",
    "gunicorn==21.2.0",
    "gevent==23.9.1",
    "python-dotenv==1.0.0",
    "psutil==5.9.8",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]